--- a/ducktoolkit/languages/us.json
+++ b/ducktoolkit/languages/us.json
@@ -102,6 +102,7 @@
     "DOWNARROW":"00,00,51",
     "UP":"00,00,52",
     "UPARROW":"00,00,52",
+     "NUMLOCK":"00,00,53",
     "APP":"00,00,65",
     "MENU":"00,00,65",
     "ALT-TAB":"00,00,71",
